# mining-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/core/: config.py  cors.py
app/engine/: calc.py  economics.py  live_data.py  mining.py
app/models/: assumptions.py  miners.py  presets.py  requests.py  responses.py
tests/: test_calculate.py  test_health.py  test_live.py
